finished functionality of website

--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>My Personal Portfolio</h1>
     <p>This is the coolest site ever!</p>
+    <p>Find my blog <a href="{% url 'blog:all_blogs' %}">here</a>.</p>
     <p>Here is a list of my projects...</p>
     <ul>
       {% for project in projects %}
