--- a/blog/templates/blogs.html
+++ b/blog/templates/blogs.html
@@ -8,14 +8,15 @@
   <body>
     <h1>Blogs</h1>
     <p>In this page you'll find all blogs!</p>
+    <h4>Noer has written {{ blogs.count }} blog{{ blogs.count|pluralize}}</h4>
     <ul>
       {% for blog in blogs %}
       <li>
         <h3>
           <a href="{% url 'blog:blog_detail' blog.id %}">{{blog.title}}</a>
         </h3>
-        <h5>{{blog.date}}</h5>
-        <p>{{blog.description}}</p>
+        <h5>{{blog.date|date:'M d Y'}}</h5>
+        <p>{{blog.description|safe|truncatechars:100}}</p>
       </li>
 
       {% endfor %}
