added new content home

--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <h1>My Personal Portfolio</h1>
-<p>This is the coolest site ever!</p>
+<p>This is the coolest site ever! You better believe that! 😁</p>
 <p>Find my blog <a href="{% url 'blog:all_blogs' %}">here</a>.</p>
 <p>Here is a list of my projects...</p>
 <ul>
